feat: creditar redução na edição de pedido
